# devlinker

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
backend/: app.py
devlinker/: __init__.py  config.py  detection_state.py  detector.py  detector_ai.py  devlinker_loader_instant.html  devlinker_loader_minimal.html  devlinker_loader_snippet.html  doctor.py  fix.py  fixer.py  global_state.py  inspect.py  logger.py  main.py  monitor.py  proxy.py  runner.py  runtime_api.py  share.py  tunnel.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx
onelink/: __init__.py  main.py  proxy.py  runner.py  tunnel.py
